@@ -121,6 +121,8 @@
     <heapDumpOnOom>
       -XX:+HeapDumpOnOutOfMemoryError
       -XX:HeapDumpPath=${packageOutputDirectory}${file.separator}${project.artifactId}-oom.hprof
+      <!-- Heap dump is produced before crashing. This flag makes sure JVM exists promptly after disaster instead of waiting for time out -->
+      -XX:+CrashOnOutOfMemoryError
     </heapDumpOnOom>
 
     <!-- Reserved for general Surefire JVM arguments that affect all SDKs. -->
@@ -258,7 +260,7 @@
       <plugin>
         <groupId>com.azure.tools</groupId>
         <artifactId>codesnippet-maven-plugin</artifactId>
-        <version>1.0.0-beta.6</version> <!-- {x-version-update;com.azure.tools:codesnippet-maven-plugin;external_dependency} -->
+        <version>1.0.0-beta.7</version> <!-- {x-version-update;com.azure.tools:codesnippet-maven-plugin;external_dependency} -->
         <configuration>
           <skip>${codesnippet.skip}</skip>
           <readmeGlob>**/*.md</readmeGlob>
@@ -336,7 +338,7 @@
       <plugin>
         <groupId>org.jacoco</groupId>
         <artifactId>jacoco-maven-plugin</artifactId>
-        <version>0.8.7</version> <!-- {x-version-update;org.jacoco:jacoco-maven-plugin;external_dependency} -->
+        <version>0.8.8</version> <!-- {x-version-update;org.jacoco:jacoco-maven-plugin;external_dependency} -->
         <configuration>
           <dataFileIncludes>
             <dataFileInclude>${project.build.directory}/jacoco.exec</dataFileInclude>
@@ -821,7 +823,7 @@
       <groupId>org.jacoco</groupId>
       <artifactId>org.jacoco.agent</artifactId>
       <classifier>runtime</classifier>
-      <version>0.8.7</version> <!-- {x-version-update;org.jacoco:org.jacoco.agent;external_dependency} -->
+      <version>0.8.8</version> <!-- {x-version-update;org.jacoco:org.jacoco.agent;external_dependency} -->
       <scope>test</scope>
     </dependency>
   </dependencies>
@@ -972,13 +974,35 @@
               </compilerArgs>
             </configuration>
             <executions>
-              <!-- compile first with module-info for Java 9+ -->
+              <!-- compile first with VM's default Java version -->
+              <!-- this will generate module-info with major class version based on the Java version being used, in CI this should be 61 (i.e Java 17) -->
               <execution>
                 <id>default-compile</id>
+                <goals>
+                  <goal>compile</goal>
+                </goals>
                 <configuration>
                   <release>${java.vm.specification.version}</release>
                 </configuration>
               </execution>
+
+              <!-- then compile with Java 11 as the base version that supports module-info -->
+              <!-- this is the Azure SDK baseline for jars that are released to Maven and should only be updated
+              when the Azure SDK policy is changed -->
+              <!-- executing this after default-compile will generate module-info with major class version 55 (i.e Java 11) -->
+              <execution>
+                <id>base-modules-compile</id>
+                <goals>
+                  <goal>compile</goal>
+                </goals>
+                <configuration>
+                  <release>11</release>
+                  <includes>
+                    <include>module-info.java</include>
+                  </includes>
+                </configuration>
+              </execution>
+
               <!-- then compile without module-info for Java 8 -->
               <execution>
                 <id>base-compile</id>
@@ -992,13 +1016,18 @@
                   </excludes>
                 </configuration>
               </execution>
-              <!-- compile tests fir with Java 9+ -->
+
+              <!-- test compile with the current VM's default Java version -->
               <execution>
                 <id>default-testCompile</id>
+                <goals>
+                  <goal>testCompile</goal>
+                </goals>
                 <configuration>
                   <testRelease>${java.vm.specification.version}</testRelease>
                 </configuration>
               </execution>
+
               <!-- then compile with Java 8 -->
               <execution>
                 <id>base-testCompile</id>
@@ -1026,6 +1055,9 @@
                 <!-- This is required as the Java 8 based implementation for ReflectionUtils may be loaded by IntelliJ when running tests with later versions of Java. -->
                 <!-- In later versions of Java, java.base doesn't open java.lang.invoke to azure-core, so it needs to be done with this directive. This only affects tests. -->
                 --add-opens java.base/java.lang.invoke=com.azure.core
+                <!-- Surefire doesn't load dependency jars properly, i.e. it disregards module-info manifests. This is a stop gap solution. -->
+                <!-- See https://github.com/Azure/azure-sdk-for-java/issues/29245 for proper solution -->
+                --add-opens com.azure.core/com.azure.core.implementation.util=ALL-UNNAMED
                 ${additionalSurefireArgLine}
               </argLine>
             </configuration>
